--- a/requirements.txt
+++ b/requirements.txt
@@ -1,187 +1,42 @@
-alabaster==0.7.11
-appdirs==1.4.3
-asn1crypto==0.24.0
-astroid==2.0.4
-astropy==3.0.4
-atomicwrites==1.2.1
-attrs==18.2.0
-Automat==0.7.0
-awsebcli==3.14.8
-Babel==2.6.0
-backcall==0.1.0
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.6.3
-bitarray==0.8.3
-bkcharts==0.2
-bleach==2.1.4
-bokeh==0.13.0
-boto==2.49.0
-botocore==1.12.71
-Bottleneck==1.2.1
-cement==2.8.2
-certifi==2018.8.24
-cffi==1.11.5
+dash-renderer==0.17.0
+dash_table==4.3.0
+certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
-cloudpickle==0.5.5
-colorama==0.3.9
-comtypes==1.1.7
-constantly==15.1.0
-contextlib2==0.5.5
-cryptography==2.3.1
-cycler==0.10.0
-Cython==0.28.5
-cytoolz==0.9.0.1
-dash==0.35.1
+dash==0.36.0
 dash-core-components==0.43.0
 dash-html-components==0.13.5
 dash-renderer==0.17.0
-dask==0.19.1
-decorator==4.3.0
-defusedxml==0.5.0
-distributed==1.23.1
-docutils==0.14
-entrypoints==0.2.3
-et-xmlfile==1.0.1
-fastcache==1.0.2
-filelock==3.0.8
+decorator==4.3.2
 Flask==1.0.2
 Flask-Compress==1.4.0
-Flask-Cors==3.0.6
-gevent==1.3.6
-glob2==0.6
-greenlet==0.4.15
 gunicorn==19.9.0
-h5py==2.8.0
-heapdict==1.0.0
-html5lib==1.0.1
-hyperlink==18.0.0
-idna==2.7
-imageio==2.4.1
-imagesize==1.1.0
-incremental==17.5.0
-ipykernel==4.10.0
-ipython==6.5.0
+idna==2.8
 ipython-genutils==0.2.0
-ipywidgets==7.4.1
-isort==4.3.4
 itsdangerous==1.1.0
-jdcal==1.4
-jedi==0.12.1
 Jinja2==2.10
-jmespath==0.9.3
-jsonify==0.5
 jsonschema==2.6.0
-keyring==13.2.1
-kiwisolver==1.0.1
-lazy-object-proxy==1.3.1
-llvmlite==0.24.0
-locket==0.2.0
-lxml==4.2.5
+jupyter-core==4.4.0
+lxml==4.3.0
 MarkupSafe==1.1.0
-matplotlib==2.2.3
-mccabe==0.6.1
-mistune==0.8.3
-more-itertools==4.3.0
-mpmath==1.0.0
-multipledispatch==0.6.0
-nbconvert==5.4.0
 nbformat==4.4.0
-networkx==2.1
-nose==1.3.7
-notebook==5.6.0
-numba==0.39.0
-numexpr==2.6.8
-numpy==1.15.4
-numpydoc==0.8.0
-packaging==17.1
-pandas==0.23.4
-pandocfilters==1.4.2
-parso==0.3.1
-partd==0.3.8
-path.py==11.1.0
-pathlib2==2.3.2
-pathspec==0.5.5
-patsy==0.5.0
-pep8==1.7.1
-pickleshare==0.7.4
-Pillow==5.2.0
-pkginfo==1.4.2
+numpy==1.16.1
+pandas==0.24.1
 plotly==3.6.0
-pluggy==0.7.1
-ply==3.11
-prometheus-client==0.3.1
-prompt-toolkit==1.0.15
-psutil==5.4.7
-py==1.6.0
-pyasn1==0.4.4
-pyasn1-modules==0.2.2
-pycodestyle==2.4.0
-pycosat==0.6.3
-pycparser==2.18
-pycrypto==2.6.1
-pycurl==7.43.0.2
-pyflakes==2.0.0
-Pygments==2.2.0
-pylint==2.1.1
-pyOpenSSL==18.0.0
-pyparsing==2.2.0
-PySocks==1.6.8
-pytz==2018.7
-PyWavelets==1.0.0
-PyYAML==3.13
-pyzmq==17.1.2
-QtAwesome==0.4.4
-qtconsole==4.4.1
-QtPy==1.5.0
-requests==2.19.1
+python-dateutil==2.7.5
+pytz==2018.9
+requests==2.21.0
 retrying==1.3.3
-rope==0.11.0
-ruamel-yaml==0.15.46
-scikit-image==0.14.0
-scikit-learn==0.20.2
-scipy==1.2.0
-seaborn==0.9.0
-semantic-version==2.5.0
-Send2Trash==1.5.0
-service-identity==17.0.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
 six==1.12.0
-sklearn==0.0
-snowballstemmer==1.2.1
-sortedcollections==1.0.1
-sortedcontainers==2.0.5
-Sphinx==1.7.9
-sphinxcontrib-websupport==1.1.0
-spyder==3.3.1
-spyder-kernels==0.2.6
-SQLAlchemy==1.2.11
-statsmodels==0.9.0
-sympy==1.1.1
-tables==3.4.4
-tblib==1.3.2
-termcolor==1.1.0
-terminado==0.8.1
-testpath==0.3.1
-toolz==0.9.0
-tornado==5.1
-tqdm==4.26.0
 traitlets==4.3.2
-Twisted==18.7.0
-unicodecsv==0.14.1
-urllib3==1.22
-virtualenv==16.2.0
-wcwidth==0.1.7
-webencodings==0.5.1
+urllib3==1.24.1
 Werkzeug==0.14.1
-widgetsnbextension==3.4.1
-win-inet-pton==1.0.1
-win-unicode-console==0.5
-wincertstore==0.2
-wrapt==1.10.11
 xlrd==1.2.0
 XlsxWriter==1.1.2
-xlwt==1.3.0
-zict==0.1.3
-dash_table==4.3.0
+pytz==2018.9
+Quandl==3.4.6
+requests==2.21.0
+six==1.12.0
+urllib3==1.24.1
+DateTime==4.3
+
