--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-dash-renderer==0.11.0
-dash_table==4.3.0
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
-dash==0.18.3
-dash-core-components==0.13.0
-dash-html-components==0.8.0
-dash-renderer==0.11.0
+dash==0.36.0
+dash-core-components==0.43.0
+dash-html-components==0.13.5
+dash-renderer==0.17.0
 decorator==4.3.2
 Flask==1.0.2
 Flask-Compress==1.4.0
@@ -39,4 +37,4 @@ requests==2.21.0
 six==1.12.0
 urllib3==1.24.1
 DateTime==4.3
-
+dash-table==4.3.0
